New Spring Security login/logout handling code, improved metadata window, processing notification, cleanup

--- a/geoportal_1/src/main/webapp/resources/ogpConfig.json
+++ b/geoportal_1/src/main/webapp/resources/ogpConfig.json
@@ -3,8 +3,8 @@
 	"googleAnalyticsId": "UA-19787732-1", 
 	"googleAPIKey": "AIzaSyCuK9otEY-rbMNJEpDO_NzD1jA-OyqubDY",
 	"search":{"serviceType": "solr", "serviceAddress": "http://localhost:8080/solr/select"}, 
-	"institutions": {"Tufts": {"login": {"loginType": "form", "authenticationPage": "authenticateIframe.jsp"}, 
-				"proxy": {"id": "proxy.Restricted.Tufts", "accessLevel": ["restricted"], "wms": "/restricted/wms"}, 
+	"institutions": {"Tufts": {"login": {"loginType": "form", "authenticationPage": "login"}, 
+				"proxy": {"id": "proxy.Restricted.Tufts", "accessLevel": ["restricted"], "wms": "restricted/wms", "wfs": "restricted/wfs"}, 
 				"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_tufts.png", "altDisplay": "Tufts", "tooltipText": "Tufts University"}}}, 
 	"Harvard":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_harvard.png", 
 			"altDisplay": "HGL", "tooltipText": "Harvard Geospatial Library"}}}, 
