updated to run against Solr 4.0.  Solr 4 gives an error if the uid (layerid) is multivalue, so this has been changed, along with necessary code changes. The value for layerId is extracted from the array early in all processes, so changes were very minor.  (SolrRecord, DownloadHandlerImpl, ImageController) The results table in the client code already autodetects whether a field is an array, so it works without issues.  The layerId is also directly obtained from Solr when metadata is displayed, so a change was needed here.
404.png was not being found.  Moved to resources/media

fixed an issue where the OpenStreetMap didn't always track with the
Google maps base map.

added loading indicator back for getfeatureinfo requests.

--- a/geoportal_1/src/main/webapp/resources/ogpConfig.json
+++ b/geoportal_1/src/main/webapp/resources/ogpConfig.json
@@ -2,7 +2,7 @@
         "institutionSpecificJavaScript": "", 
 	"googleAnalyticsId": "UA-19787732-1", 
 	"googleAPIKey": "AIzaSyCuK9otEY-rbMNJEpDO_NzD1jA-OyqubDY",
-	"search":{"serviceType": "solr", "serviceAddress": "http://localhost:8080/solr/select"}, 
+	"search":{"serviceType": "solr", "serviceAddress": "http://localhost:8080/solr/collection1/select"}, 
 	"institutions": {"Tufts": {"login": {"loginType": "form", "authenticationPage": "login"}, 
 				"proxy": {"id": "proxy.Restricted.Tufts", "accessLevel": ["restricted"], "wms": "restricted/wms", "wfs": "restricted/wfs"}, 
 				"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_tufts.png", "altDisplay": "Tufts", "tooltipText": "Tufts University"}}}, 
