--- a/geoportal_1/src/main/webapp/WEB-INF/web.xml
+++ b/geoportal_1/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	
  <context-param>
   		<param-name>contextConfigLocation</param-name>
-  		<param-value>/WEB-INF/applicationContext.xml /WEB-INF/appServlet-servlet.xml /WEB-INF/security-app-context.xml</param-value>
+  		<param-value>/WEB-INF/applicationContext.xml /WEB-INF/security-app-context.xml</param-value>
 	</context-param>
 <filter>
    <filter-name>springSecurityFilterChain</filter-name>
