fixed kml, removed copy fields from SolrRecord object

--- a/geoportal_1/src/main/webapp/resources/ogpDownloadConfig.json
+++ b/geoportal_1/src/main/webapp/resources/ogpDownloadConfig.json
@@ -1,6 +1,6 @@
 {"config":{
 	"institutions":{
-		"Tufts":[{"classKey": "layerDownloader.kml.reflector", "accessLevel":["public"],"dataType":["vector", "raster"], "outputFormats":["kml", "kmz"]},
+		"Tufts":[{"classKey": "layerDownloader.kml", "accessLevel":["public"],"dataType":["vector", "raster"], "outputFormats":["kml", "kmz"]},
 			{"classKey": "layerDownloader.wfs", "accessLevel":["public"],"dataType":["vector"], "outputFormats":["shp"]},
 			{"classKey": "layerDownloader.wfs.proxied", "accessLevel":["restricted"],"dataType":["vector"], "outputFormats":["shp"]},
 			{"classKey": "layerDownloader.wcs", "accessLevel":["public"],"dataType":["raster", "paper map"],"outputFormats":["geotiff"]},
@@ -11,8 +11,9 @@
 		"Harvard":[{"classKey": "layerDownloader.kml", "accessLevel":["public"],"dataType":["vector","raster","paper map"], "outputFormats":["kml","kmz"]},
 			{"classKey": "layerDownloader.wfs", "accessLevel":["public"],"dataType":["vector"],"outputFormats":["shp"]},
 			{"classKey": "layerDownloader.email.HGL", "accessLevel":["public","restricted"],"dataType":["raster","paper map"],"outputFormats":["geotiff"]}],
-		"MIT":[{"classKey": "layerDownloader.kml", "accessLevel":["public"],"dataType":["vector","raster"], "outputFormats":["kml", "kmz"]},
-		    {"classKey": "layerDownloader.all.MIT", "accessLevel":["public"],"dataType":["vector"],"outputFormats":["shp"]}], 
+		"MIT":[{"classKey": "layerDownloader.kml", "accessLevel":["public"],"dataType":["vector", "raster"], "outputFormats":["kml", "kmz"]},
+			{"classKey": "layerDownloader.wfs", "accessLevel":["public","restricted"],"dataType":["vector"], "outputFormats":["shp"]},
+			{"classKey": "layerDownloader.wcs", "accessLevel":["public","restricted"],"dataType":["raster", "paper map"],"outputFormats":["geotiff"]}], 
 		"MassGIS":[{"classKey": "layerDownloader.kml", "accessLevel":["public"],"dataType":["vector", "raster"], "outputFormats":["kml", "kmz"]},                  
 			{"classKey": "layerDownloader.wfs", "accessLevel":["public","restricted"],"dataType":["vector"],"outputFormats":["shp"]},
 			{"classKey": "layerDownloader.wcs", "accessLevel":["public","restricted"],"dataType":["raster", "paper map"],"outputFormats":["geotiff"]}]}}} 
