--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.OpenGeoPortal</groupId>
   <artifactId>geoportal</artifactId>
   <packaging>war</packaging>
-  <version>1.2.BETA</version>
+  <version>1.2.RC1</version>
   <name>opengeoportal webapp</name>
   <url>http://opengeoportal.org</url>
 	<!-- this is the project's initial pom file and there are, no doubt, many 
