--- a/geoportal_1/src/main/webapp/WEB-INF/web.xml
+++ b/geoportal_1/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,23 @@
   		<param-value>/WEB-INF/applicationContext.xml /WEB-INF/security-app-context.xml</param-value>
 	</context-param>
 <filter>
+	<filter-name>jsonpCallbackFilter</filter-name>
+	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+</filter>
+
+<filter-mapping>
+	<filter-name>jsonpCallbackFilter</filter-name>
+	<url-pattern>/login</url-pattern>
+</filter-mapping>
+<filter-mapping>
+	<filter-name>jsonpCallbackFilter</filter-name>
+	<url-pattern>/loginStatus</url-pattern>
+</filter-mapping>
+<filter-mapping>
+	<filter-name>jsonpCallbackFilter</filter-name>
+	<url-pattern>/logout</url-pattern>
+</filter-mapping>
+<filter>
    <filter-name>springSecurityFilterChain</filter-name>
     	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
