--- a/geoportal_1/src/main/webapp/resources/ogpConfig.json
+++ b/geoportal_1/src/main/webapp/resources/ogpConfig.json
@@ -1,8 +1,8 @@
 {"config":{"homeInstitution": "Tufts", "institutionSpecificCss": "resources/css/institutionTufts.css", 
         "institutionSpecificJavaScript": "", 
-	"googleAnalyticsId": "UA-19787732-1", 
-	"googleAPIKey": "AIzaSyCuK9otEY-rbMNJEpDO_NzD1jA-OyqubDY",
-	"search":{"serviceType": "solr", "serviceAddress": "http://localhost:8080/solr/select"}, 
+	"googleAnalyticsId": "", 
+	"googleAPIKey": "",
+	"search":{"serviceType": "solr", "serviceAddress": "http://geodata.tufts.edu/solr/select"}, 
 	"institutions": {"Tufts": {"login": {"loginType": "form", "authenticationPage": "login"}, 
 				"proxy": {"id": "proxy.Restricted.Tufts", "accessLevel": ["restricted"], "wms": "restricted/wms", "wfs": "restricted/wfs"}, 
 				"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_tufts.png", "altDisplay": "Tufts", "tooltipText": "Tufts University"}}}, 
