Added rudimentary iso metadata xsl stylesheet and code to determine which stylesheet to apply (fgdc or iso).  Also, adding back autocomplete for originator and fix for styled select menus.

--- a/geoportal_1/src/main/webapp/resources/ogpConfig.json
+++ b/geoportal_1/src/main/webapp/resources/ogpConfig.json
@@ -1,14 +1,16 @@
 {"config":{"homeInstitution": "Tufts", "institutionSpecificCss": "resources/css/institutionTufts.css", 
         "institutionSpecificJavaScript": "", 
-	"googleAnalyticsId": "", 
-	"googleAPIKey": "",
-	"search":{"serviceType": "solr", "serviceAddress": "http://geodata.tufts.edu/solr/select"}, 
+	"googleAnalyticsId": "UA-19787732-1", 
+	"googleAPIKey": "AIzaSyCuK9otEY-rbMNJEpDO_NzD1jA-OyqubDY",
+	"search":{"serviceType": "solr", "serviceAddress": "http://localhost:8080/solr/select"}, 
 	"institutions": {"Tufts": {"login": {"loginType": "form", "authenticationPage": "login"}, 
 				"proxy": {"id": "proxy.Restricted.Tufts", "accessLevel": ["restricted"], "wms": "restricted/wms", "wfs": "restricted/wfs"}, 
 				"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_tufts.png", "altDisplay": "Tufts", "tooltipText": "Tufts University"}}}, 
 	"Harvard":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_harvard.png", 
 			"altDisplay": "HGL", "tooltipText": "Harvard Geospatial Library"}}}, 
 	"Berkeley":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_berkeley.png", "altDisplay": "Berkeley", "tooltipText": "UC Berkeley"}}}, 
-	"MIT":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_mit.png", "altDisplay": "MIT", "tooltipText": "Massachusetts Institute of Technology"}}}, 
+	"MIT":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_mit.png", "altDisplay": "MIT", "tooltipText": "Massachusetts Institute of Technology"}}},
+	"Maryland":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_maryland.png", "altDisplay": "University of Maryland", "tooltipText": "University of Maryland"}}},
+		"UNWFP":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_un.png", "altDisplay": "UN World Food Program", "tooltipText": "UN World Food Program"}}},  
 	"MassGIS":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_massgis.png", "altDisplay": "MassGIS", "tooltipText": "MassGIS"}}}
 	}}}
