GetFeatureInfoController now handles empty workspaces.  layerTable.js adjusts bounds reported to solr; google map only shows +-85 degrees lat. That extent is now reported to the solr query as +-90 degrees.  layers with undefined data types are included in advanced search results if all or no datatypes are selected.  Unspecified dates ("0001") are rendered as "?" in the ui. 'Unknown' data type added in solr.js, so we can search for these layers.  In userInterface.js, if there is a fileDownload value in the location field, we try to download directly via the client using this url.  Also, a bug fix for mouse cursor behavior previously squashed was reintroduced. In includes.jsp, we are now using relative protocol notation.

--- a/geoportal_1/src/main/webapp/resources/ogpConfig.json
+++ b/geoportal_1/src/main/webapp/resources/ogpConfig.json
@@ -11,6 +11,7 @@
 	"Berkeley":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_berkeley.png", "altDisplay": "Berkeley", "tooltipText": "UC Berkeley"}}}, 
 	"MIT":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_mit.png", "altDisplay": "MIT", "tooltipText": "Massachusetts Institute of Technology"}}},
 	"Maryland":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_maryland.png", "altDisplay": "University of Maryland", "tooltipText": "University of Maryland"}}},
+			"UN":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_un.png", "altDisplay": "United Nations", "tooltipText": "United Nations"}}}, 
 		"UNWFP":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_un.png", "altDisplay": "UN World Food Program", "tooltipText": "UN World Food Program"}}},  
 	"MassGIS":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_massgis.png", "altDisplay": "MassGIS", "tooltipText": "MassGIS"}}}
 	}}}
