--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -241,6 +241,15 @@
 	<build>
 	    <finalName>opengeoportal</finalName>
 		<plugins>
+		<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.0</version>
+    <configuration>
+        <source>1.5</source>
+        <target>1.5</target>
+    </configuration>
+	</plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
