Lots of interface changes towards 2.0

--- a/geoportal_1/src/main/webapp/resources/ogpConfig.json
+++ b/geoportal_1/src/main/webapp/resources/ogpConfig.json
@@ -1,4 +1,4 @@
-{"config":{"homeInstitution": "Tufts", "institutionSpecificCss": "resources/css/institutionTufts.css", 
+{"config":{"homeInstitution": "Tufts", "institutionSpecificCss": "", 
         "institutionSpecificJavaScript": "", 
 	"googleAnalyticsId": "UA-19787732-1", 
 	"googleAPIKey": "AIzaSyCuK9otEY-rbMNJEpDO_NzD1jA-OyqubDY",
