--- a/geoportal_1/src/main/webapp/resources/ogpConfig.json
+++ b/geoportal_1/src/main/webapp/resources/ogpConfig.json
@@ -2,16 +2,16 @@
         "institutionSpecificJavaScript": "", 
 	"googleAnalyticsId": "UA-19787732-1", 
 	"googleAPIKey": "AIzaSyCuK9otEY-rbMNJEpDO_NzD1jA-OyqubDY",
-	"search":{"serviceType": "solr", "serviceAddress": "http://localhost:8080/solr/select"}, 
+	"search":{"serviceType": "solr", "serviceAddress": "http://geoportal-demo.atech.tufts.edu/solr/select"}, 
 	"institutions": {"Tufts": {"login": {"loginType": "form", "authenticationPage": "login"}, 
 				"proxy": {"id": "proxy.Restricted.Tufts", "accessLevel": ["restricted"], "wms": "restricted/wms", "wfs": "restricted/wfs"}, 
-				"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_tufts.png", "altDisplay": "Tufts", "tooltipText": "Tufts University"}}}, 
-	"Harvard":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_harvard.png", 
+				"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_tufts.png", "uiClass": "tuftsIcon", "altDisplay": "Tufts", "tooltipText": "Tufts University"}}}, 
+	"Harvard":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_harvard.png", "uiClass": "harvardIcon", 
 			"altDisplay": "HGL", "tooltipText": "Harvard Geospatial Library"}}}, 
-	"Berkeley":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_berkeley.png", "altDisplay": "Berkeley", "tooltipText": "UC Berkeley"}}}, 
-	"MIT":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_mit.png", "altDisplay": "MIT", "tooltipText": "Massachusetts Institute of Technology"}}},
-	"Maryland":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_maryland.png", "altDisplay": "University of Maryland", "tooltipText": "University of Maryland"}}},
-			"UN":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_un.png", "altDisplay": "United Nations", "tooltipText": "United Nations"}}}, 
-		"UNWFP":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_un.png", "altDisplay": "UN World Food Program", "tooltipText": "UN World Food Program"}}},  
-	"MassGIS":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_massgis.png", "altDisplay": "MassGIS", "tooltipText": "MassGIS"}}}
+	"Berkeley":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_berkeley.png", "uiClass": "berkeleyIcon", "altDisplay": "Berkeley", "tooltipText": "UC Berkeley"}}}, 
+	"MIT":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_mit.png", "uiClass": "mitIcon", "altDisplay": "MIT", "tooltipText": "Massachusetts Institute of Technology"}}},
+	"Maryland":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_maryland.png", "uiClass": "marylandIcon", "altDisplay": "University of Maryland", "tooltipText": "University of Maryland"}}},
+			"UN":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_un.png", "uiClass": "unIcon", "altDisplay": "United Nations", "tooltipText": "United Nations"}}}, 
+		"UNWFP":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_un.png", "uiClass": "unIcon", "altDisplay": "UN World Food Program", "tooltipText": "UN World Food Program"}}},  
+	"MassGIS":{"graphics":{"sourceIcon":{"resourceLocation": "resources/media/src_massgis.png", "uiClass": "massgisIcon", "altDisplay": "MassGIS", "tooltipText": "MassGIS"}}}
 	}}}
