--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -237,6 +237,11 @@
 		  	<version>3.1-b02</version>
 		  	<scope>provided</scope>
 		  </dependency>
+		  <dependency>
+		  	<groupId>com.thetransactioncompany</groupId>
+		  	<artifactId>cors-filter</artifactId>
+		  	<version>1.3.2</version>
+		  </dependency>
 	</dependencies>
 	<build>
 	    <finalName>opengeoportal</finalName>
@@ -246,8 +251,8 @@
     <artifactId>maven-compiler-plugin</artifactId>
     <version>3.0</version>
     <configuration>
-        <source>1.5</source>
-        <target>1.5</target>
+        <source>1.6</source>
+        <target>1.6</target>
     </configuration>
 	</plugin>
       <plugin>
