--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -26,6 +26,8 @@
 		<jackson.version>2.0.5</jackson.version>
     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    	<wro4j.version>1.6.3</wro4j.version>
+    	<warFile.name>opengeoportal</warFile.name>
 	</properties>
 	<dependencies>
 
@@ -232,19 +234,25 @@
 		  	<version>4.2.1</version>
 		  </dependency>
 		  <dependency>
-		  	<groupId>javax.servlet</groupId>
-		  	<artifactId>javax.servlet-api</artifactId>
-		  	<version>3.1-b02</version>
-		  	<scope>provided</scope>
-		  </dependency>
-		  <dependency>
 		  	<groupId>com.thetransactioncompany</groupId>
 		  	<artifactId>cors-filter</artifactId>
 		  	<version>1.3.2</version>
 		  </dependency>
+		  <dependency>
+		  	<groupId>ro.isdc.wro4j</groupId>
+		  	<artifactId>wro4j-maven-plugin</artifactId>
+		  	<version>1.6.3</version>
+		  	<type>maven-plugin</type>
+		  </dependency>
+		  <dependency>
+		  	<groupId>javax.servlet</groupId>
+		  	<artifactId>servlet-api</artifactId>
+		  	<version>2.5</version>
+		  	<scope>provided</scope>
+		  </dependency>
 	</dependencies>
 	<build>
-	    <finalName>opengeoportal</finalName>
+	    <finalName>${warFile.name}</finalName>
 		<plugins>
 		<plugin>
     <groupId>org.apache.maven.plugins</groupId>
@@ -268,6 +276,26 @@
           </execution>
         </executions>
         </plugin>
-		</plugins>
+  <plugin>
+    <groupId>ro.isdc.wro4j</groupId>
+    <artifactId>wro4j-maven-plugin</artifactId>
+    <version>${wro4j.version}</version>
+    <executions>
+      <execution>
+        <phase>compile</phase>
+        <goals>
+          <goal>run</goal>
+        </goals>
+      </execution>
+    </executions>
+    <configuration>
+      <targetGroups>ogp,ogpLib</targetGroups>
+      <minimize>true</minimize>
+      <cssDestinationFolder>${basedir}/target/${warFile.name}/resources/css/</cssDestinationFolder>
+      <jsDestinationFolder>${basedir}/target/${warFile.name}/resources/javascript/</jsDestinationFolder>
+      <wroManagerFactory>ro.isdc.wro.extensions.manager.standalone.GoogleStandaloneManagerFactory</wroManagerFactory>
+    </configuration>
+  </plugin>
+</plugins>
 	</build>
 </project>
