--- a/geoportal_1/.project
+++ b/geoportal_1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>geoportal</name>
+	<name>geoportalDev</name>
 	<comment></comment>
 	<projects>
 	</projects>
