--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -22,8 +22,8 @@
 		WEB-INF, one at the top level and one at ROOT/WEB-INF. -->
 	<!-- Shared version number properties -->
 	<properties>
-		<org.springframework.version>3.1.2.RELEASE</org.springframework.version>
-		<jackson.version>2.0.5</jackson.version>
+		<org.springframework.version>3.2.2.RELEASE</org.springframework.version>
+		<jackson.version>1.9.12</jackson.version>
     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     	<wro4j.version>1.6.3</wro4j.version>
@@ -216,12 +216,12 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-core-lgpl</artifactId>
-			<version>1.9.9</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-lgpl</artifactId>
-			<version>1.9.9</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		  <dependency>
         	<groupId>org.apache.commons</groupId>
@@ -276,7 +276,7 @@
           </execution>
         </executions>
         </plugin>
-  <plugin>
+  <!-- <plugin>
     <groupId>ro.isdc.wro4j</groupId>
     <artifactId>wro4j-maven-plugin</artifactId>
     <version>${wro4j.version}</version>
@@ -295,7 +295,7 @@
       <jsDestinationFolder>${basedir}/target/${warFile.name}/resources/javascript/</jsDestinationFolder>
       <wroManagerFactory>ro.isdc.wro.extensions.manager.standalone.GoogleStandaloneManagerFactory</wroManagerFactory>
     </configuration>
-  </plugin>
+  </plugin>-->
 </plugins>
 	</build>
 </project>
