--- a/geoportal_1/src/main/webapp/WEB-INF/web.xml
+++ b/geoportal_1/src/main/webapp/WEB-INF/web.xml
@@ -1,81 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="OGP_Tufts" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>OpenGeoPortal</display-name>
-		<welcome-file-list>
+	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
-	
- <context-param>
-  		<param-name>contextConfigLocation</param-name>
-  		<param-value>/WEB-INF/applicationContext.xml /WEB-INF/tufts-security-app-context.xml</param-value>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/applicationContext.xml /WEB-INF/tufts-security-app-context.xml</param-value>
 	</context-param>
-<filter>
-	<filter-name>jsonpCallbackFilter</filter-name>
-	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-</filter>
-
-<filter-mapping>
-	<filter-name>jsonpCallbackFilter</filter-name>
-	<url-pattern>/login</url-pattern>
-</filter-mapping>
-<filter-mapping>
-	<filter-name>jsonpCallbackFilter</filter-name>
-	<url-pattern>/loginStatus</url-pattern>
-</filter-mapping>
-<filter-mapping>
-	<filter-name>jsonpCallbackFilter</filter-name>
-	<url-pattern>/logout</url-pattern>
-</filter-mapping>
-<filter>
-   <filter-name>springSecurityFilterChain</filter-name>
-    	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	<filter>
+		<filter-name>jsonpCallbackFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
-
 	<filter-mapping>
-  		<filter-name>springSecurityFilterChain</filter-name>
-  		<url-pattern>/*</url-pattern>
+		<filter-name>jsonpCallbackFilter</filter-name>
+		<url-pattern>/login</url-pattern>
 	</filter-mapping>
-	<listener>  
-  		<listener-class>  
-   		org.springframework.web.context.request.RequestContextListener  
-  		</listener-class>  
+	<filter-mapping>
+		<filter-name>jsonpCallbackFilter</filter-name>
+		<url-pattern>/loginStatus</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>jsonpCallbackFilter</filter-name>
+		<url-pattern>/logout</url-pattern>
+	</filter-mapping>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<listener>
+		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
 	<listener>
-  		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener> 
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 	<listener>
-	 <listener-class>
-            org.OpenGeoPortal.Download.RequestStatusSessionListener
-        </listener-class>
-  </listener>
-    <servlet>
-        <servlet-name>appServlet</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
+		<listener-class>org.OpenGeoPortal.Download.RequestStatusSessionListener</listener-class>
+	</listener>
+	<servlet>
+		<servlet-name>appServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>appServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+	<filter>
+		<filter-name>CORS</filter-name>
+		<filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+		<init-param>
+			<param-name>cors.supportedMethods</param-name>
+			<param-value>GET, HEAD, POST, PUT, DELETE, OPTIONS</param-value>
+		</init-param>
+		<init-param>
+			<param-name>cors.supportedHeaders</param-name>
+			<param-value>Content-Type, X-Requested-With, Origin, Accept</param-value>
+		</init-param>
 
-    <servlet-mapping>
-        <servlet-name>appServlet</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
-        <filter>
-<filter-name>CORS</filter-name>
-<filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
-
-<init-param>
-   <param-name>cors.supportedMethods</param-name>
-   <param-value>GET, HEAD, POST, PUT, DELETE, OPTIONS</param-value>
-</init-param>
-
-<init-param>
-   <param-name>cors.supportedHeaders</param-name>
-   <param-value>Content-Type, X-Requested-With, Origin, Accept</param-value>
-</init-param>
-
-    </filter>
-
-    <filter-mapping>
-<filter-name>CORS</filter-name>
-<url-pattern>/*</url-pattern>
-    </filter-mapping>
+	</filter>
+	<filter-mapping>
+		<filter-name>CORS</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
