added a controller for iframe login, fixed geocommons export, adding/removing columns from the preview panel, exploration of wfs download using GeoTools (GML to shapefile).

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -1,7 +1,7 @@
 ogp.proxyToWMS=http://127.0.0.1:8580/wms
 ogp.proxyToWFS=http://127.0.0.1:8580/wfs
 ogp.proxyToWCS=http://127.0.0.1:8580/wcs
-
+ogp.domain=http://localhost:8080
 ldap.url=ldapurl
 ldap.userSearchFilter=(uid={0})
 admins=admin
