--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -252,6 +252,11 @@
 			<artifactId>gt-main</artifactId>
 			<version>${geotools.version}</version>
 		</dependency>
+				<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-shapefile</artifactId>
+			<version>${geotools.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-metadata</artifactId>
@@ -272,6 +277,11 @@
 			<artifactId>gt-epsg-extension</artifactId>
 			<version>${geotools.version}</version>
 		</dependency>
+		<dependency>
+   			<groupId>org.geotools</groupId>
+   			<artifactId>gt-wfs</artifactId>
+   			<version>${geotools.version}</version>
+ 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient-cache</artifactId>
@@ -303,6 +313,11 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-cas</artifactId>
+			<version>3.1.4.RELEASE</version>
 		</dependency>
 	</dependencies>
 	<build>
