refactored config from static json file to properties file with controllers.  index(home) page is now a controller so that some values can be injected (faster page load).  More values are configurable via properties file.

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -1,7 +1,60 @@
-ogp.proxyToWMS=http://127.0.0.1:8580/wms
-ogp.proxyToWFS=http://127.0.0.1:8580/wfs
-ogp.proxyToWCS=http://127.0.0.1:8580/wcs
+# The domain of your ogp site.  This value is used for CORS and other
+# security measures
 ogp.domain=http://localhost:8080
-ldap.url=ldapurl
-ldap.userSearchFilter=(uid={0})
-admins=admin
+
+# if you have css and js files to localize your ogp site, you can reference
+# them here
+ogp.cssLocalized=
+ogp.jsLocalized=
+
+# default is OpenGeoportal
+ogp.pageTitle=
+
+# comma separated list of repository ids (see repositories.properties)
+# that will appear in the repositories drop down 
+# and will be queried by solr 
+# you can specify "all" for defaultSelected or particular repository ids
+ogp.repositories=tufts,harvard,berkeley,mit,massgis
+ogp.repositories.defaultSelected=all
+
+# to use google analytics and link shortener and geocoder, you need
+# your own api keys
+apikey.analytics=UA-19787732-1
+apikey.google=
+
+solr.url.internal=
+# the url given to the web browser so that it can query solr directly
+# if .internal is blank the external value will be used internally as well
+# By default, this value will point to the Tufts production solr instance
+solr.url.external=http://geodata.tufts.edu/solr
+
+# if you are using ogp to proxy download and preview of layers, set it
+# up here.  (form is: proxy.${repository id}.*)
+proxy.tufts.accessLevel=restricted
+
+#specifying "geoserver" expands to wms, wfs, and wcs endpoint mappings
+proxy.tufts.geoserver.internal=http://127.0.0.1:8580
+proxy.tufts.geoserver.external=restricted
+proxy.tufts.geoserver.username=
+proxy.tufts.geoserver.password=
+
+# this should eventually go in an auth module, I think.
+login.repository=tufts
+login.type=form
+login.url=login
+login.secureDomain=https://localhost:8443
+
+# every ${cleanupInterval} milliseconds, files older than ${maxFileAge} minutes are
+# deleted
+cleanupInterval=30000
+maxFileAge=240
+
+threadPool.executor=5
+threadPool.scheduler=1
+
+connectionPool.maxTotal=100
+connectionPool.maxPerRoute=10
+
+
+
+
