--- a/geoportal_1/src/main/webapp/WEB-INF/web.xml
+++ b/geoportal_1/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>OpenGeoportal</display-name>
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index</welcome-file>
 	</welcome-file-list>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -46,6 +46,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
+		<url-pattern>/index</url-pattern>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<filter>
