Converted home page to controller to inject values from config.  Also changed to using factory pattern to provide prototype scoped objects to singleton controllers.

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -49,7 +49,13 @@ login.secureDomain=https://localhost:8443
 cleanupInterval=30000
 maxFileAge=240
 
-threadPool.executor=5
+# maximum memory for the initial ImageBuffer in the ImageCompositor in MB's
+# this will be an uncompressed array of ints representing pixels.  To composite,
+# the compositor will need twice this amount of heap space.
+# 20 MB roughly equates to an image of 2289 pixels sq.
+maxImageSize=20
+
+threadPool.executor=5-10
 threadPool.scheduler=1
 
 connectionPool.maxTotal=100
