--- a/geoportal_1/src/main/webapp/WEB-INF/web.xml
+++ b/geoportal_1/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,19 @@
 	</welcome-file-list>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/applicationContext.xml /WEB-INF/security-app-context.xml classpath*:org/opengeoportal/**/applicationContext.xml</param-value>
+		<param-value>/WEB-INF/applicationContext.xml</param-value>
 	</context-param>
-	<filter>
+	<servlet>
+		<servlet-name>appServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>2</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>appServlet</servlet-name>  
+		<url-pattern>/index</url-pattern>		
+		<url-pattern>/</url-pattern>		
+	</servlet-mapping>
+	<!--<filter>
 		<filter-name>jsonpCallbackFilter</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
@@ -21,7 +31,7 @@
 	<filter-mapping>
 		<filter-name>jsonpCallbackFilter</filter-name>
 		<url-pattern>/logout</url-pattern>
-	</filter-mapping>
+	</filter-mapping>-->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -39,16 +49,7 @@
 	<listener>
 		<listener-class>org.opengeoportal.download.RequestStatusSessionListener</listener-class>
 	</listener>
-	<servlet>
-		<servlet-name>appServlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/index</url-pattern>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+
 	<filter>
 		<filter-name>CORS</filter-name>
 		<filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
