--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.OpenGeoPortal</groupId>
 	<artifactId>geoportal</artifactId>
 	<packaging>war</packaging>
-	<version>2.0.ALPHA</version>
+	<version>2.0.BETA</version>
 	<name>opengeoportal webapp</name>
 	<url>http://opengeoportal.org</url>
 	<repositories>
