--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -19,7 +19,7 @@ ogp.repositories.defaultSelected=all
 
 # to use google analytics and link shortener and geocoder, you need
 # your own api keys
-apikey.analytics=UA-19787732-1
+apikey.analytics=
 apikey.google=
 
 solr.url.internal=
@@ -45,13 +45,13 @@ login.url=login
 login.secureDomain=https://localhost:8443
 
 # every ${cleanupInterval} milliseconds, files older than ${maxFileAge} minutes are
-# deleted
+# deleted from the download folder
 cleanupInterval=30000
 maxFileAge=240
 
 # maximum memory for the initial ImageBuffer in the ImageCompositor in MB's
 # this will be an uncompressed array of ints representing pixels.  To composite,
-# the compositor will need twice this amount of heap space.
+# the compositor will need about twice this amount of heap space.
 # 20 MB roughly equates to an image of 2289 pixels sq.
 maxImageSize=20
 
