--- a/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
@@ -23,7 +23,7 @@ maryland.fullName=University of Maryland (CARPE)
 maryland.sourceIconClass=marylandIcon
 
 un.shortName=UN
-un.fullName="United Nations"
+un.fullName=United Nations
 un.sourceIconClass=unIcon
 
 unwfp.shortName=UNWFP
