fix for differing browser scrollbar widths.
leftPanelModel.js separated from view file.

support for specifying header title (text) in ogp.properties

In DownloadHandlerImpl, don't check for wms describe layer info unless
there is a wms url for the layer.

In MetadataDownloadController, specify UTF-8 and proper mime type (see
Mike Graves' pull request for 1.2 branch)

changed search form boxes to type search per HTML5

misc bug fixes

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -4,11 +4,15 @@ ogp.domain=http://localhost:8080
 
 # if you have css and js files to localize your ogp site, you can reference
 # them here
+#example:
+#ogp.cssLocalized=resources/css/localizeTufts.css
 ogp.cssLocalized=
 ogp.jsLocalized=
 
 # default is OpenGeoportal
-ogp.pageTitle=
+#primary is the main text color (default black) and offset will have the css class offsetColor
+ogp.pageTitle.primary=
+ogp.pageTitle.offset=
 
 # comma separated list of repository ids (see repositories.properties)
 # that will appear in the repositories drop down 
