refactored cart actions as Backbone views on the cart collection.
Other clean-up.

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -30,7 +30,9 @@ solr.url.internal=
 # the url given to the web browser so that it can query solr directly
 # if .internal is blank the external value will be used internally as well
 # By default, this value will point to the Tufts production solr instance
-solr.url.external=http://geodata.tufts.edu/solr
+#solr.url.external=http://geodata.tufts.edu/solr
+solr.url.external=http://localhost:8080/solr
+
 
 # if you are using ogp to proxy download and preview of layers, set it
 # up here.  (form is: proxy.${repository id}.*)
