--- a/geoportal_1/src/main/webapp/WEB-INF/web.xml
+++ b/geoportal_1/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="OGP" version="2.4"
-	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+	      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	      xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+	      http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	      version="2.5">
 	<display-name>OpenGeoportal</display-name>
-	<welcome-file-list>
-		<welcome-file>index</welcome-file>
-	</welcome-file-list>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext.xml</param-value>
@@ -17,21 +16,16 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>  
-		<url-pattern>/index</url-pattern>		
 		<url-pattern>/</url-pattern>		
 	</servlet-mapping>
-	<!--<filter>
+	<filter>
 		<filter-name>jsonpCallbackFilter</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>jsonpCallbackFilter</filter-name>
-		<url-pattern>/loginStatus</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<filter-mapping>
-		<filter-name>jsonpCallbackFilter</filter-name>
-		<url-pattern>/logout</url-pattern>
-	</filter-mapping>-->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
