added NoopLoginController for iframe login for auth schemes that use a web form from an external server to authenticate, but don't integrate deeply with Spring.
Altered OgpConfigRetriever to access properties not defined in the
properties object.

Made a few changes to the default security-app-context.xml, such as
disabling http basic auth.

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -41,14 +41,23 @@ proxy.tufts.accessLevel=restricted
 #specifying "geoserver" expands to wms, wfs, and wcs endpoint mappings
 proxy.tufts.geoserver.internal=http://127.0.0.1:8580
 proxy.tufts.geoserver.external=restricted
+#functionality not yet implemented...
 proxy.tufts.geoserver.username=
 proxy.tufts.geoserver.password=
 
 # this should eventually go in an auth module, I think.
 login.repository=tufts
+#'form' or 'iframe'
 login.type=form
+#'login' for local form (ldap or default username and password)
+#'weblogin' for noop iframe login (external web form auth with no deep Spring Security integration)
+#'restricted/weblogin' for iframe login (external web form auth with deep Spring Security integration [CAS, potentially Shib])
 login.url=login
 login.secureDomain=https://localhost:8443
+#if you're using the noop iframe login, you'll need to uncomment these values and insert appropriate values (you can just use the ones in
+#the default authenticationManager (see security-app-context.xml)
+#login.noop.user=
+#login.noop.password=
 
 # every ${cleanupInterval} milliseconds, files older than ${maxFileAge} minutes are
 # deleted from the download folder
