--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -30,8 +30,8 @@ solr.url.internal=
 # the url given to the web browser so that it can query solr directly
 # if .internal is blank the external value will be used internally as well
 # By default, this value will point to the Tufts production solr instance
-#solr.url.external=http://geodata.tufts.edu/solr
-solr.url.external=http://localhost:8080/solr
+solr.url.external=http://geodata.tufts.edu/solr
+#solr.url.external=http://localhost:8080/solr
 
 
 # if you are using ogp to proxy download and preview of layers, set it
@@ -54,10 +54,10 @@ login.type=form
 #'restricted/weblogin' for iframe login (external web form auth with deep Spring Security integration [CAS, potentially Shib])
 login.url=login
 login.secureDomain=https://localhost:8443
-#if you're using the noop iframe login, you'll need to uncomment these values and insert appropriate values (you can just use the ones in
+#if you're using the nop iframe login, you'll need to uncomment these values and insert appropriate values (you can just use the ones in
 #the default authenticationManager (see security-app-context.xml)
-#login.noop.user=
-#login.noop.password=
+#login.nop.user=
+#login.nop.password=
 
 # every ${cleanupInterval} milliseconds, files older than ${maxFileAge} minutes are
 # deleted from the download folder
