committing some unindexed resources (views)
moved download directory value to ogp.properties

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -60,7 +60,8 @@ login.secureDomain=https://localhost:8443
 #login.nop.password=
 
 # every ${cleanupInterval} milliseconds, files older than ${maxFileAge} minutes are
-# deleted from the download folder
+# deleted from the download folder java.temp/${ogp.downloadDir}
+ogp.downloadDir=ogpdownload
 cleanupInterval=30000
 maxFileAge=240
 
