change: moved xslt transforms for metadata to server side to eliminate cross-browser issues. stylesheets are specified in ogp.properties
change: css changes to support IE 9.

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -73,6 +73,10 @@ login.secureDomain=https://localhost:8443
 # every ${cleanupInterval} milliseconds, files older than ${maxFileAge} minutes are
 # deleted from the download folder java.temp/${ogp.downloadDir}
 ogp.downloadDir=ogpdownload
+
+styleSheet.fgdc=WEB-INF/xml/FGDC_V2_a.xsl
+styleSheet.iso19139=WEB-INF/xml/isoBasic.xsl
+
 cleanupInterval=30000
 maxFileAge=240
 
