implemented support for "previewLink" type in the Location field, as well as code to construct a url to a layer on an external ogp site (v1, v2 or geoweb type), which is used when layer access is restricted at an external institution.  The implementation required additional fields in the repositories.properties file to specify the node type and the base url.  Also created a mechanism for subclasses of the LayerRow object to inherit events.

--- a/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
@@ -1,22 +1,31 @@
 # Configuration for repositories. Which of these repositories
 # are searched and appear in the interface is specified in
 # ogp.properties
+# at some point, there should be a centralized store for these repository definitions
 
 tufts.shortName=Tufts
 tufts.fullName=Tufts University
 tufts.sourceIconClass=tuftsIcon
+tufts.nodeType=ogp2
+tufts.url=http://geodata.tufts.edu
 
 harvard.shortName=Harvard
 harvard.fullName=Harvard Geospatial Library
 harvard.sourceIconClass=harvardIcon
+harvard.nodeType=ogp1
+harvard.url=http://calvert.hul.harvard.edu:8080/opengeoportal
 
 berkeley.shortName=Berkeley
 berkeley.fullName=UC Berkeley
 berkeley.sourceIconClass=berkeleyIcon
+berkeley.nodeType=ogp1
+berkeley.url=http://gis-gs.lib.berkeley.edu:8080
 
 mit.shortName=MIT
 mit.fullName=Massachusetts Institute of Technology
 mit.sourceIconClass=mitIcon
+mit.nodeType=geoweb
+mit.url=https://arrowsmith.mit.edu/mitogp
 
 maryland.shortName=Maryland
 maryland.fullName=University of Maryland (CARPE)
