--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -318,6 +318,11 @@
 			<artifactId>eclipselink</artifactId>
 			<version>2.5.2-M1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${warFile.name}</finalName>
@@ -327,8 +332,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.0</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 			<plugin>
