--- a/geoportal_1/src/main/webapp/resources/ogpDownloadConfig.json
+++ b/geoportal_1/src/main/webapp/resources/ogpDownloadConfig.json
@@ -6,7 +6,7 @@
 		"harvard":[
 			{"classKey": "layerDownloader.email.HGL", "accessLevel":["public","restricted"],"dataType":["raster","paper map"],"outputFormats":["geotiff"]}],
 		"default":[{"classKey": "layerDownloader.wfs", "accessLevel":["public"],"dataType":["vector"],"outputFormats":["shp"], "preference": 1},
-			{"classKey": "layerDownloader.wcs", "accessLevel":["public"],"dataType":["raster", "paper map"],"outputFormats":["geotiff"], "preference": 1},
-			{"classKey": "layerDownloader.wms", "accessLevel":["public"],"dataType":["raster", "paper map"],"outputFormats":["geotiff"], "preference": 3},
+			{"classKey": "layerDownloader.wcs", "accessLevel":["public"],"dataType":["raster", "scannedmap"],"outputFormats":["geotiff"], "preference": 1},
+			{"classKey": "layerDownloader.wms", "accessLevel":["public"],"dataType":["raster", "scannedmap"],"outputFormats":["geotiff"], "preference": 3},
 			{"classKey": "layerDownloader.kml", "accessLevel":["public"],"dataType":["raster", "vector"],"outputFormats":["kml", "kmz"], "preference": 4},
 			{"classKey": "layerDownloader.file", "accessLevel":["public"],"dataType":["vector", "raster"],"outputFormats":["shp", "geotiff"], "preference": 2}]}}} 
