--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -323,6 +323,11 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.7.3</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.10</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${warFile.name}</finalName>
