--- a/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
@@ -47,4 +47,14 @@ columbia.shortName=Columbia
 columbia.fullName=Columbia University
 columbia.sourceIconClass=columbiaIcon
 
+ct_deep.shortName=CT_DEEP
+ct_deep.fullName=Connecticut Dept. of Energy & Env. Protection
+ct_deep.sourceIconClass=ctdeepIcon
+
+pasda.shortName=PASDA
+pasda.fullName=Pennsylvania Geospatial Data Clearinghouse
+pasda.sourceIconClass=pasdaIcon
+
+
+
 				
