--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -19,7 +19,7 @@ ogp.pageTitle.offset=
 # that will appear in the repositories drop down 
 # and will be queried by solr 
 # you can specify "all" for defaultSelected or particular repository ids
-ogp.repositories=tufts,harvard,berkeley,mit,massgis
+ogp.repositories=tufts,harvard,berkeley,mit,massgis,ct_deep,pasda
 ogp.repositories.defaultSelected=all
 
 # to use google analytics and link shortener and geocoder, you need
@@ -34,8 +34,8 @@ apikey.google=
 # .external needs to be a web accessible url
 # note: currently ogp will use only /select and /terms
 solr.url.internal=
-solr.url.external=http://geodata.tufts.edu/solr
-#solr.url.external=http://localhost:8080/solr
+#solr.url.external=http://geodata.tufts.edu/solr
+solr.url.external=http://localhost:8080/solr
 
 
 # if you are using ogp to proxy download and preview of layers, set it
