-show images linked to in attribute info -ui to download files linked to in attribute info
-increased the number of features returned on getfeatureinfo to 50
-missing 'WorkspaceName' caused an exception on map preview
-some events were scoped to "body" instead of "document"
-some ogp custom events were named 'search.*', which conflicted with the
event fired by HTML5 search input (Chrome). Changed to 'searchform.*'

--- a/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
@@ -47,6 +47,14 @@ columbia.shortName=Columbia
 columbia.fullName=Columbia University
 columbia.sourceIconClass=columbiaIcon
 
+usgs.shortName=USGS
+usgs.fullName=US Geological Survey
+usgs.sourceIconClass=usgsIcon
+
+nygis.shortName=NYGIS
+nygis.fullName=NYS GIS Clearinghouse
+nygis.sourceIconClass=nygisIcon
+
 ct_deep.shortName=CT_DEEP
 ct_deep.fullName=Connecticut Dept. of Energy & Env. Protection
 ct_deep.sourceIconClass=ctdeepIcon
