--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -318,6 +318,11 @@
 			<artifactId>eclipselink</artifactId>
 			<version>2.5.2-M1</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${warFile.name}</finalName>
