add repositories, improved iso xslt

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -19,7 +19,7 @@ ogp.pageTitle.offset=
 # that will appear in the repositories drop down 
 # and will be queried by solr 
 # you can specify "all" for defaultSelected or particular repository ids
-ogp.repositories=tufts,harvard,berkeley,mit,massgis,ct_deep,pasda
+ogp.repositories=tufts,harvard,berkeley,mit,columbia,massgis,nygis,usgs,pasda,ct_deep,stanford,princeton
 ogp.repositories.defaultSelected=all
 
 # to use google analytics and link shortener and geocoder, you need
@@ -75,7 +75,9 @@ login.secureDomain=https://localhost:8443
 ogp.downloadDir=ogpdownload
 
 styleSheet.fgdc=WEB-INF/xml/FGDC_V2_a.xsl
-styleSheet.iso19139=WEB-INF/xml/isoBasic.xsl
+#styleSheet.iso19139=WEB-INF/xml/iso2html/xml-to-html-ISO.xsl
+styleSheet.iso19139=WEB-INF/xml/iso2html/pacioos-iso-html.xsl
+styleSheet.dublin=
 
 cleanupInterval=30000
 maxFileAge=240
