--- a/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
@@ -63,6 +63,14 @@ pasda.shortName=PASDA
 pasda.fullName=Pennsylvania Geospatial Data Clearinghouse
 pasda.sourceIconClass=pasdaIcon
 
+stanford.shortName=Stanford
+stanford.fullName=Stanford University
+stanford.sourceIconClass=stanfordIcon
+
+princeton.shortName=Princeton
+princeton.fullName=Princeton University
+princeton.sourceIconClass=princetonIcon
+
 
 
 				
